// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Heatmap/Simple Basic smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="400"
     height="250"
     style="height: 250px; width: 400px;"
>
  <svg width="400"
       height="250"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(46, 10)">
      <g transform="translate(0, 148)"
         visibility="visible"
      >
        <g transform="translate(31.591836734693878, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Lateral Movement
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Lateral Movement
            </text>
          </g>
        </g>
        <g transform="translate(101.79591836734693, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Discovery
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Discovery
            </text>
          </g>
        </g>
        <g transform="translate(172, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Exploitation
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Exploitation
            </text>
          </g>
        </g>
        <g transform="translate(242.20408163265304, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Threat Intelligence
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Threat…
            </text>
          </g>
        </g>
        <g transform="translate(312.4081632653061, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Breach
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Breach
            </text>
          </g>
        </g>
      </g>
      <g transform="translate(0, 0)"
         visibility="visible"
      >
        <g transform="translate(0, 130.9230769230769)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              XML
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              XML
            </text>
          </g>
        </g>
        <g transform="translate(0, 92.97435897435898)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              JSON
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              JSON
            </text>
          </g>
        </g>
        <g transform="translate(0, 55.02564102564102)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              HTTPS
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              HTTPS
            </text>
          </g>
        </g>
        <g transform="translate(0, 17.076923076923077)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              SSH
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              SSH
            </text>
          </g>
        </g>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fff7ec"
              stroke="#fff7ec"
              x="0"
              y="113.84615384615384"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ XML: 0"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(255, 247, 236); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#ef6548"
              stroke="#ef6548"
              x="0"
              y="75.8974358974359"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ JSON: 120"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(239, 101, 72); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#d7301f"
              stroke="#d7301f"
              x="0"
              y="37.94871794871795"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ HTTPS: 150"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(215, 48, 31); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#ef6548"
              stroke="#ef6548"
              x="0"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ SSH: 112"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(239, 101, 72); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fc8d59"
              stroke="#fc8d59"
              x="70.20408163265306"
              y="113.84615384615384"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ XML: 100"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(252, 141, 89); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fee8c8"
              stroke="#fee8c8"
              x="70.20408163265306"
              y="75.8974358974359"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ JSON: 34"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(254, 232, 200); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fff7ec"
              stroke="#fff7ec"
              x="70.20408163265306"
              y="37.94871794871795"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ HTTPS: 0"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(255, 247, 236); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fc8d59"
              stroke="#fc8d59"
              x="70.20408163265306"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ SSH: 111"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(252, 141, 89); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fdbb84"
              stroke="#fdbb84"
              x="140.40816326530611"
              y="113.84615384615384"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ XML: 70"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(253, 187, 132); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fff7ec"
              stroke="#fff7ec"
              x="140.40816326530611"
              y="75.8974358974359"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ JSON: 1"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(255, 247, 236); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fc8d59"
              stroke="#fc8d59"
              x="140.40816326530611"
              y="37.94871794871795"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ HTTPS: 110"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(252, 141, 89); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#ef6548"
              stroke="#ef6548"
              x="140.40816326530611"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ SSH: 115"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(239, 101, 72); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fff7ec"
              stroke="#fff7ec"
              x="210.61224489795916"
              y="113.84615384615384"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ XML: 1"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(255, 247, 236); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#ef6548"
              stroke="#ef6548"
              x="210.61224489795916"
              y="75.8974358974359"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ JSON: 120"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(239, 101, 72); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#7f0000"
              stroke="#7f0000"
              x="210.61224489795916"
              y="37.94871794871795"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ HTTPS: 200"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(127, 0, 0); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#b30000"
              stroke="#b30000"
              x="210.61224489795916"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ SSH: 160"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(179, 0, 0); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fff7ec"
              stroke="#fff7ec"
              x="280.81632653061223"
              y="113.84615384615384"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ XML: 5"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(255, 247, 236); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fff7ec"
              stroke="#fff7ec"
              x="280.81632653061223"
              y="75.8974358974359"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ JSON: 10"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(255, 247, 236); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#d7301f"
              stroke="#d7301f"
              x="280.81632653061223"
              y="37.94871794871795"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ HTTPS: 152"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(215, 48, 31); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="63.183673469387756"
              height="34.15384615384615"
              fill="#fff7ec"
              stroke="#fff7ec"
              x="280.81632653061223"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ SSH: 20"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(255, 247, 236); cursor: auto;"
        >
        </rect>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Heatmap/Simple BasicLegend smoke-test 1`] = `
<div style="display: flex; height: 250px;">
  <div class="_container_1u3dt_1"
       width="400"
       height="250"
       style="height: 250px; width: 400px;"
  >
    <svg width="400"
         height="250"
         class="_svg_1u3dt_30"
         tabindex="0"
    >
      <g transform="translate(46, 10)">
        <g transform="translate(0, 148)"
           visibility="visible"
        >
          <g transform="translate(25.617021276595743, 0)">
            <g transform="translate(0, 5)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                Lateral Movement
              </title>
              <text transform="rotate(-60)"
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                Lateral Movement
              </text>
            </g>
          </g>
          <g transform="translate(98.80851063829786, 0)">
            <g transform="translate(0, 5)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                Discovery
              </title>
              <text transform="rotate(-60)"
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                Discovery
              </text>
            </g>
          </g>
          <g transform="translate(172, 0)">
            <g transform="translate(0, 5)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                Exploitation
              </title>
              <text transform="rotate(-60)"
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                Exploitation
              </text>
            </g>
          </g>
          <g transform="translate(245.19148936170214, 0)">
            <g transform="translate(0, 5)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                Threat Intelligence
              </title>
              <text transform="rotate(-60)"
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                Threat…
              </text>
            </g>
          </g>
          <g transform="translate(318.3829787234042, 0)">
            <g transform="translate(0, 5)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                Breach
              </title>
              <text transform="rotate(-60)"
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                Breach
              </text>
            </g>
          </g>
        </g>
        <g transform="translate(0, 0)"
           visibility="visible"
        >
          <g transform="translate(0, 134)">
            <g transform="translate(-5, 0)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                XML
              </title>
              <text transform
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                XML
              </text>
            </g>
          </g>
          <g transform="translate(0, 94)">
            <g transform="translate(-5, 0)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                JSON
              </title>
              <text transform
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                JSON
              </text>
            </g>
          </g>
          <g transform="translate(0, 54)">
            <g transform="translate(-5, 0)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                HTTPS
              </title>
              <text transform
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                HTTPS
              </text>
            </g>
          </g>
          <g transform="translate(0, 14)">
            <g transform="translate(-5, 0)"
               font-size="11"
               font-family="sans-serif"
            >
              <title>
                SSH
              </title>
              <text transform
                    text-anchor="end"
                    alignment-baseline="middle"
                    fill="#8F979F"
              >
                SSH
              </text>
            </g>
          </g>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="0"
                y="120"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Lateral Movement ∙ XML: 0"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="0"
                y="80"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Lateral Movement ∙ JSON: 120"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="0"
                y="40"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Lateral Movement ∙ HTTPS: 150"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="0"
                y="0"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Lateral Movement ∙ SSH: 112"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="73.19148936170212"
                y="120"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Discovery ∙ XML: 100"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="73.19148936170212"
                y="80"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Discovery ∙ JSON: 34"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="73.19148936170212"
                y="40"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Discovery ∙ HTTPS: 0"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="73.19148936170212"
                y="0"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Discovery ∙ SSH: 111"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="146.38297872340425"
                y="120"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Exploitation ∙ XML: 70"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="146.38297872340425"
                y="80"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Exploitation ∙ JSON: 1"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="146.38297872340425"
                y="40"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Exploitation ∙ HTTPS: 110"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="146.38297872340425"
                y="0"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Exploitation ∙ SSH: 115"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="219.5744680851064"
                y="120"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Threat Intelligence ∙ XML: 1"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="219.5744680851064"
                y="80"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Threat Intelligence ∙ JSON: 120"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="219.5744680851064"
                y="40"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Threat Intelligence ∙ HTTPS: 200"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="219.5744680851064"
                y="0"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Threat Intelligence ∙ SSH: 160"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="292.7659574468085"
                y="120"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Breach ∙ XML: 5"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="292.7659574468085"
                y="80"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Breach ∙ JSON: 10"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="#2da283"
                stroke="#2da283"
                x="292.7659574468085"
                y="40"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Breach ∙ HTTPS: 152"
                role="graphics-document"
                opacity="1"
                style="fill: rgb(45, 162, 131); cursor: auto;"
          >
          </rect>
        </g>
        <g>
          <rect width="51.234042553191486"
                height="28"
                fill="rgba(28, 107, 86, 0.5)"
                stroke="rgba(28, 107, 86, 0.5)"
                x="292.7659574468085"
                y="0"
                rx="2"
                ry="2"
                class="_cell_r3f8c_1"
                tabindex="0"
                aria-label="Breach ∙ SSH: 20"
                role="graphics-document"
                opacity="1"
                style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
          >
          </rect>
        </g>
      </g>
    </svg>
  </div>
  <div class="_container_1gnp9_1 _vertical_1gnp9_5"
       style="height: 165px; margin-left: 10px;"
  >
    <div class="_start_1gnp9_9">
      200
    </div>
    <div class="_gradient_1gnp9_16"
         style="background: linear-gradient(rgb(45, 162, 131) 0%, rgba(43, 156, 126, 0.945) 10%, rgba(41, 150, 121, 0.89) 20%, rgba(39, 144, 116, 0.83) 30%, rgba(37, 138, 111, 0.776) 40%, rgba(36, 131, 106, 0.72) 50%, rgba(34, 125, 101, 0.667) 60%, rgba(32, 119, 96, 0.61) 70%, rgba(30, 113, 91, 0.557) 80%, rgba(28, 107, 86, 0.5) 90%);"
    >
    </div>
    <div class="_end_1gnp9_10">
      0
    </div>
  </div>
</div>
`;

exports[`Charts/Heatmap/Simple MultiAxis smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="400"
     height="250"
     style="height: 250px; width: 400px;"
>
  <svg width="400"
       height="250"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(32, 0)">
      <g transform="translate(0, 168)"
         visibility="visible"
      >
        <g transform="translate(27.404255319148934, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Lateral Movement
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Lateral Movement
            </text>
          </g>
        </g>
        <g transform="translate(105.70212765957446, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Discovery
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Discovery
            </text>
          </g>
        </g>
        <g transform="translate(184, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Exploitation
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Exploitation
            </text>
          </g>
        </g>
        <g transform="translate(262.2978723404255, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Threat Intelligence
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Threat…
            </text>
          </g>
        </g>
        <g transform="translate(340.59574468085106, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Breach
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Breach
            </text>
          </g>
        </g>
      </g>
      <g transform="translate(0, 0)"
         visibility="visible"
      >
        <g transform="translate(0, 152.1081081081081)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              XML
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              XML
            </text>
          </g>
        </g>
        <g transform="translate(0, 106.7027027027027)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              JSON
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              JSON
            </text>
          </g>
        </g>
        <g transform="translate(0, 61.29729729729729)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              HTTPS
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              HTTPS
            </text>
          </g>
        </g>
        <g transform="translate(0, 15.89189189189189)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              SSH
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              SSH
            </text>
          </g>
        </g>
      </g>
      <g transform="translate(368, 0)"
         visibility="visible"
      >
        <g transform="translate(0, 143)">
          <g transform="translate(10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Before
            </title>
            <text transform
                  text-anchor="start"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Before
            </text>
          </g>
        </g>
        <g transform="translate(0, 48)">
          <g transform="translate(10, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              After
            </title>
            <text transform
                  text-anchor="start"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              After
            </text>
          </g>
        </g>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="0"
              y="136.2162162162162"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ XML: 0"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="0"
              y="90.8108108108108"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ JSON: 120"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="0"
              y="45.4054054054054"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ HTTPS: 150"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="0"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Lateral Movement ∙ SSH: 112"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="78.29787234042553"
              y="136.2162162162162"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ XML: 100"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="78.29787234042553"
              y="90.8108108108108"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ JSON: 34"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="78.29787234042553"
              y="45.4054054054054"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ HTTPS: 0"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="78.29787234042553"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Discovery ∙ SSH: 111"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="156.59574468085106"
              y="136.2162162162162"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ XML: 70"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="156.59574468085106"
              y="90.8108108108108"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ JSON: 1"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="156.59574468085106"
              y="45.4054054054054"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ HTTPS: 110"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="156.59574468085106"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Exploitation ∙ SSH: 115"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="234.89361702127658"
              y="136.2162162162162"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ XML: 1"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="234.89361702127658"
              y="90.8108108108108"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ JSON: 120"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="234.89361702127658"
              y="45.4054054054054"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ HTTPS: 200"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="234.89361702127658"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Threat Intelligence ∙ SSH: 160"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="313.1914893617021"
              y="136.2162162162162"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ XML: 5"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="313.1914893617021"
              y="90.8108108108108"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ JSON: 10"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="#2da283"
              stroke="#2da283"
              x="313.1914893617021"
              y="45.4054054054054"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ HTTPS: 152"
              role="graphics-document"
              opacity="1"
              style="fill: rgb(45, 162, 131); cursor: auto;"
        >
        </rect>
      </g>
      <g>
        <rect width="54.80851063829787"
              height="31.78378378378378"
              fill="rgba(28, 107, 86, 0.5)"
              stroke="rgba(28, 107, 86, 0.5)"
              x="313.1914893617021"
              y="0"
              rx="2"
              ry="2"
              class="_cell_r3f8c_1"
              tabindex="0"
              aria-label="Breach ∙ SSH: 20"
              role="graphics-document"
              opacity="1"
              style="fill: rgba(28, 107, 86, 0.5); cursor: auto;"
        >
        </rect>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Heatmap/Simple Symbols smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="230"
     height="230"
     style="height: 230px; width: 230px;"
>
  <svg width="230"
       height="230"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(46, 10)">
      <g transform="translate(0, 128)"
         visibility="visible"
      >
        <g transform="translate(15.979591836734693, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Lateral Movement
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Lateral Movement
            </text>
          </g>
        </g>
        <g transform="translate(87, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Exploitation
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Exploitation
            </text>
          </g>
        </g>
        <g transform="translate(158.0204081632653, 0)">
          <g transform="translate(0, 5)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              Breach
            </title>
            <text transform="rotate(-60)"
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              Breach
            </text>
          </g>
        </g>
      </g>
      <g transform="translate(0, 0)"
         visibility="visible"
      >
        <g transform="translate(0, 113.23076923076925)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              XML
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              XML
            </text>
          </g>
        </g>
        <g transform="translate(0, 80.41025641025642)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              JSON
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              JSON
            </text>
          </g>
        </g>
        <g transform="translate(0, 47.5897435897436)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              HTTPS
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              HTTPS
            </text>
          </g>
        </g>
        <g transform="translate(0, 14.769230769230772)">
          <g transform="translate(-5, 0)"
             font-size="11"
             font-family="sans-serif"
          >
            <title>
              SSH
            </title>
            <text transform
                  text-anchor="end"
                  alignment-baseline="middle"
                  fill="#8F979F"
            >
              SSH
            </text>
          </g>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fff7ec"
           stroke="#fff7ec"
           class
           transform="translate(0, 98.46153846153848)"
           tabindex="0"
           aria-label="Lateral Movement ∙ XML: 0"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(255, 247, 236); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#ef6548"
           stroke="#ef6548"
           class
           transform="translate(0, 65.64102564102565)"
           tabindex="0"
           aria-label="Lateral Movement ∙ JSON: 120"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(239, 101, 72); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#d7301f"
           stroke="#d7301f"
           class
           transform="translate(0, 32.820512820512825)"
           tabindex="0"
           aria-label="Lateral Movement ∙ HTTPS: 150"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(215, 48, 31); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#ef6548"
           stroke="#ef6548"
           class
           transform="translate(0, 0)"
           tabindex="0"
           aria-label="Lateral Movement ∙ SSH: 112"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(239, 101, 72); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fc8d59"
           stroke="#fc8d59"
           class
           transform="translate(35.51020408163265, 98.46153846153848)"
           tabindex="0"
           aria-label="Discovery ∙ XML: 100"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(252, 141, 89); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fee8c8"
           stroke="#fee8c8"
           class
           transform="translate(35.51020408163265, 65.64102564102565)"
           tabindex="0"
           aria-label="Discovery ∙ JSON: 34"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(254, 232, 200); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fff7ec"
           stroke="#fff7ec"
           class
           transform="translate(35.51020408163265, 32.820512820512825)"
           tabindex="0"
           aria-label="Discovery ∙ HTTPS: 0"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(255, 247, 236); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fc8d59"
           stroke="#fc8d59"
           class
           transform="translate(35.51020408163265, 0)"
           tabindex="0"
           aria-label="Discovery ∙ SSH: 111"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(252, 141, 89); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fdbb84"
           stroke="#fdbb84"
           class
           transform="translate(71.0204081632653, 98.46153846153848)"
           tabindex="0"
           aria-label="Exploitation ∙ XML: 70"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(253, 187, 132); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fff7ec"
           stroke="#fff7ec"
           class
           transform="translate(71.0204081632653, 65.64102564102565)"
           tabindex="0"
           aria-label="Exploitation ∙ JSON: 1"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(255, 247, 236); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fc8d59"
           stroke="#fc8d59"
           class
           transform="translate(71.0204081632653, 32.820512820512825)"
           tabindex="0"
           aria-label="Exploitation ∙ HTTPS: 110"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(252, 141, 89); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#ef6548"
           stroke="#ef6548"
           class
           transform="translate(71.0204081632653, 0)"
           tabindex="0"
           aria-label="Exploitation ∙ SSH: 115"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(239, 101, 72); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fff7ec"
           stroke="#fff7ec"
           class
           transform="translate(106.53061224489795, 98.46153846153848)"
           tabindex="0"
           aria-label="Threat Intelligence ∙ XML: 1"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(255, 247, 236); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#ef6548"
           stroke="#ef6548"
           class
           transform="translate(106.53061224489795, 65.64102564102565)"
           tabindex="0"
           aria-label="Threat Intelligence ∙ JSON: 120"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(239, 101, 72); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#7f0000"
           stroke="#7f0000"
           class
           transform="translate(106.53061224489795, 32.820512820512825)"
           tabindex="0"
           aria-label="Threat Intelligence ∙ HTTPS: 200"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(127, 0, 0); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#b30000"
           stroke="#b30000"
           class
           transform="translate(106.53061224489795, 0)"
           tabindex="0"
           aria-label="Threat Intelligence ∙ SSH: 160"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(179, 0, 0); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fff7ec"
           stroke="#fff7ec"
           class
           transform="translate(142.0408163265306, 98.46153846153848)"
           tabindex="0"
           aria-label="Breach ∙ XML: 5"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(255, 247, 236); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fff7ec"
           stroke="#fff7ec"
           class
           transform="translate(142.0408163265306, 65.64102564102565)"
           tabindex="0"
           aria-label="Breach ∙ JSON: 10"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(255, 247, 236); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#d7301f"
           stroke="#d7301f"
           class
           transform="translate(142.0408163265306, 32.820512820512825)"
           tabindex="0"
           aria-label="Breach ∙ HTTPS: 152"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(215, 48, 31); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
      <g>
        <g width="31.959183673469386"
           height="29.538461538461544"
           fill="#fff7ec"
           stroke="#fff7ec"
           class
           transform="translate(142.0408163265306, 0)"
           tabindex="0"
           aria-label="Breach ∙ SSH: 20"
           role="graphics-document"
           opacity="1"
           style="fill: rgb(255, 247, 236); cursor: auto;"
        >
          <circle r="14"
                  transform="translate(14, 14)"
          >
          </circle>
        </g>
      </g>
    </g>
  </svg>
</div>
`;
